added database.env.sample